include $(top_srcdir)/Make-rules

GNU_KAWA_IO_JSOURCES = \
  kawa/io/BinaryInPort.java \
  kawa/io/BinaryOutPort.java \
  kawa/io/CharArrayInPort.java \
  kawa/io/CharArrayOutPort.java \
  kawa/io/InPort.java \
  kawa/io/LineBufferedReader.java \
  kawa/io/LineInputStreamReader.java \
  kawa/io/LogWriter.java \
  kawa/io/NullReader.java \
  kawa/io/OutPort.java \
  kawa/io/PrettyWriter.java \
  kawa/io/QueueReader.java \
  kawa/io/TtyInPort.java \
  kawa/io/WriterManager.java

GNU_KAWA_UTIL_JSOURCES = \
  kawa/util/AbstractHashTable.java \
  kawa/util/AbstractWeakHashTable.java \
  kawa/util/FixupHtmlToc.java \
  kawa/util/GeneralHashTable.java \
  kawa/util/IdentityHashTable.java \
  kawa/util/IntHashTable.java \
  kawa/util/HashNode.java \
  kawa/util/RangeTable.java \
  kawa/util/RunTestScript.java \
  kawa/util/WeakHashNode.java \
  kawa/util/WeakIdentityHashMap.java

GNU_KAWA_REFLECT_JSOURCES = \
  kawa/reflect/ArrayGet.java \
  kawa/reflect/ArrayLength.java \
  kawa/reflect/ArrayNew.java \
  kawa/reflect/ArraySet.java \
  kawa/reflect/ClassMemberLocation.java \
  kawa/reflect/ClassMethods.java \
  kawa/reflect/CompileArrays.java \
  kawa/reflect/CompileBuildObject.java \
  kawa/reflect/CompileInvoke.java \
  kawa/reflect/CompileReflect.java \
  kawa/reflect/FieldLocation.java \
  kawa/reflect/InstanceOf.java \
  kawa/reflect/Invoke.java \
  kawa/reflect/LazyType.java \
  kawa/reflect/MakeAnnotation.java \
  kawa/reflect/OccurrenceType.java \
  kawa/reflect/ProceduralProxy.java \
  kawa/reflect/SingletonType.java \
  kawa/reflect/SlotGet.java \
  kawa/reflect/SlotSet.java \
  kawa/reflect/StaticFieldLocation.java \
  kawa/reflect/StaticGet.java \
  kawa/reflect/StaticSet.java \
  kawa/reflect/Throw.java \
  kawa/reflect/TypeSwitch.java

GNU_KAWA_FUNCTIONS_JSOURCES = \
  kawa/functions/AddOp.java \
  kawa/functions/AppendValues.java \
  kawa/functions/Apply.java \
  kawa/functions/ApplyToArgs.java \
  kawa/functions/Arithmetic.java \
  kawa/functions/ArithOp.java \
  kawa/functions/Arrays.java \
  kawa/functions/ArrayRef.java \
  kawa/functions/ArraySet.java \
  kawa/functions/BitwiseOp.java \
  kawa/functions/CallCC.java \
  kawa/functions/CompilationHelpers.java \
  kawa/functions/CompileArith.java \
  kawa/functions/CompileNamedPart.java \
  kawa/functions/CompileMisc.java \
  kawa/functions/CompileProcess.java \
  kawa/functions/ConstantFunction0.java \
  kawa/functions/Convert.java \
  kawa/functions/CurryExp.java \
  kawa/functions/Curry1.java \
  kawa/functions/DisplayFormat.java \
  kawa/functions/DivideOp.java \
  kawa/functions/FileUtils.java \
  kawa/functions/GetModuleClass.java \
  kawa/functions/GetNamedInstancePart.java \
  kawa/functions/GetNamedPart.java \
  kawa/functions/IntegerFormat.java \
  kawa/functions/IsEq.java \
  kawa/functions/IsEqual.java \
  kawa/functions/IsEqv.java \
  kawa/functions/LProcess.java \
  kawa/functions/MakeList.java \
  kawa/functions/MakeProcedure.java \
  kawa/functions/MakePromise.java \
  kawa/functions/Map.java \
  kawa/functions/MultiplyOp.java \
  kawa/functions/NamedPart.java \
  kawa/functions/Not.java \
  kawa/functions/NumberCompare.java \
  kawa/functions/NumberPredicate.java \
  kawa/functions/RunProcess.java \
  kawa/functions/SetNamedPart.java \
  kawa/functions/Setter.java \
  kawa/functions/UnicodeUtils.java \
  kawa/functions/ValuesMap.java \
  kawa/functions/Format.java \
  kawa/functions/LispFormat.java \
  kawa/functions/LispRealFormat.java \
  kawa/functions/ObjectFormat.java \
  kawa/functions/ParseFormat.java

if ENABLE_XML
GNU_KAWA_LISPEXPR_XML_JSOURCES = \
  kawa/lispexpr/MakeXmlElement.java \
  kawa/lispexpr/ReaderXmlElement.java \
  kawa/lispexpr/ResolveNamespace.java
endif

GNU_KAWA_LISPEXPR_JSOURCES = \
  kawa/lispexpr/BracketApply.java \
  kawa/lispexpr/ClassNamespace.java \
  kawa/lispexpr/DefineNamespace.java \
  kawa/lispexpr/LangObjType.java \
  kawa/lispexpr/LangPrimType.java \
  kawa/lispexpr/LispLanguage.java \
  kawa/lispexpr/LispPackage.java \
  kawa/lispexpr/LispReader.java \
  kawa/lispexpr/ReaderColon.java \
  kawa/lispexpr/ReaderConstituent.java \
  kawa/lispexpr/ReaderDispatch.java \
  kawa/lispexpr/ReaderDispatchMacro.java \
  kawa/lispexpr/ReaderDispatchMisc.java \
  kawa/lispexpr/ReaderDispatchSyntaxQuote.java \
  kawa/lispexpr/ReaderExtendedLiteral.java \
  kawa/lispexpr/ReaderIgnoreRestOfLine.java \
  kawa/lispexpr/ReaderMacro.java \
  kawa/lispexpr/ReaderMisc.java \
  kawa/lispexpr/ReaderParens.java \
  kawa/lispexpr/ReaderQuote.java \
  kawa/lispexpr/ReaderString.java \
  kawa/lispexpr/ReaderTypespec.java \
  kawa/lispexpr/ReaderVector.java \
  kawa/lispexpr/ReadTable.java \
  kawa/lispexpr/ReadTableEntry.java \
  $(GNU_KAWA_LISPEXPR_XML_JSOURCES)

GNU_KAWA_MODELS_JSOURCES = \
  kawa/models/Box.java \
  kawa/models/Button.java \
  kawa/models/Column.java \
  kawa/models/Display.java \
  kawa/models/DrawImage.java \
  kawa/models/DrawShape.java \
  kawa/models/FillShape.java \
  kawa/models/Label.java \
  kawa/models/Model.java \
  kawa/models/ModelListener.java \
  kawa/models/MenuItem.java \
  kawa/models/Paintable.java \
  kawa/models/Row.java \
  kawa/models/Spacer.java \
  kawa/models/Text.java \
  kawa/models/Viewable.java \
  kawa/models/WeakListener.java \
  kawa/models/Window.java \
  kawa/models/WithComposite.java \
  kawa/models/WithPaint.java \
  kawa/models/WithTransform.java

GNU_KAWA_SWINGVIEWS_JSOURCES =\
  kawa/swingviews/SwingButton.java \
  kawa/swingviews/SwingContent.java \
  kawa/swingviews/SwingDisplay.java \
  kawa/swingviews/SwingFrame.java \
  kawa/swingviews/SwingPaintable.java

GNU_KAWA_SWTVIEWS_JSOURCES =\
  kawa/swtviews/SwtDisplay.java

GNU_ECMASCRIPT_JSOURCES =\
  ecmascript/Reserved.java \
  ecmascript/BinaryOp.java \
  ecmascript/Convert.java \
  ecmascript/Lexer.java \
  ecmascript/Parser.java \
  ecmascript/Prompter.java

GNU_XML_JSOURCES = \
  xml/NamedChildrenFilter.java \
  xml/NamespaceBinding.java \
  xml/NodeTree.java \
  xml/TextUtils.java \
  xml/XMLFilter.java \
  xml/XMLParser.java \
  xml/XMLPrinter.java \
  xml/XName.java

GNU_KAWA_XML_JSOURCES = \
  kawa/xml/AncestorAxis.java \
  kawa/xml/AncestorOrSelfAxis.java \
  kawa/xml/AttributeAxis.java \
  kawa/xml/Attributes.java \
  kawa/xml/AttributeType.java \
  kawa/xml/Base64Binary.java \
  kawa/xml/BinaryObject.java \
  kawa/xml/ChildAxis.java \
  kawa/xml/Children.java \
  kawa/xml/CoerceNodes.java \
  kawa/xml/CommentConstructor.java \
  kawa/xml/CompileXmlFunctions.java \
  kawa/xml/DescendantAxis.java \
  kawa/xml/DescendantOrSelfAxis.java \
  kawa/xml/Document.java \
  kawa/xml/DocumentConstructor.java \
  kawa/xml/ElementType.java \
  kawa/xml/Focus.java \
  kawa/xml/FollowingAxis.java \
  kawa/xml/FollowingSiblingAxis.java \
  kawa/xml/HexBinary.java \
  kawa/xml/HttpPrinter.java \
  kawa/xml/IntersectNodes.java \
  kawa/xml/IteratorItems.java \
  kawa/xml/KAttr.java \
  kawa/xml/KCDATASection.java \
  kawa/xml/KCharacterData.java \
  kawa/xml/KComment.java \
  kawa/xml/KDocument.java \
  kawa/xml/KElement.java \
  kawa/xml/KNode.java \
  kawa/xml/KProcessingInstruction.java \
  kawa/xml/KText.java \
  kawa/xml/ListItems.java \
  kawa/xml/MakeAttribute.java \
  kawa/xml/MakeCDATA.java \
  kawa/xml/MakeElement.java \
  kawa/xml/MakeProcInst.java \
  kawa/xml/MakeResponseHeader.java \
  kawa/xml/MakeText.java \
  kawa/xml/MakeUnescapedData.java \
  kawa/xml/MakeWithBaseUri.java \
  kawa/xml/NodeCompare.java \
  kawa/xml/NodeConstructor.java \
  kawa/xml/Nodes.java \
  kawa/xml/NodeSetType.java \
  kawa/xml/NodeType.java \
  kawa/xml/Notation.java \
  kawa/xml/OutputAsXML.java \
  kawa/xml/ParentAxis.java \
  kawa/xml/PrecedingAxis.java \
  kawa/xml/PrecedingSiblingAxis.java \
  kawa/xml/ProcessingInstructionType.java \
  kawa/xml/SelfAxis.java \
  kawa/xml/SortNodes.java \
  kawa/xml/SortedNodes.java \
  kawa/xml/TreeScanner.java \
  kawa/xml/UnionNodes.java \
  kawa/xml/UntypedAtomic.java \
  kawa/xml/WriteTo.java \
  kawa/xml/XDataType.java \
  kawa/xml/XInteger.java \
  kawa/xml/XIntegerType.java \
  kawa/xml/XString.java \
  kawa/xml/XStringType.java \
  kawa/xml/XTimeType.java \
  kawa/xml/XmlNamespace.java

GNU_KAWA_SAX_JSOURCES = \
  kawa/sax/ContentConsumer.java \
  kawa/sax/KawaXMLReader.java

# These Java sources are not built or used when using configure+make, only
# when using Ant - but they still should go into the distribution tar file.
GNU_KAWA_ANT_JSOURCES =\
  kawa/ant/LineStripperSet.java \
  kawa/ant/LineCommenterSet.java \
  kawa/ant/XCopy.java \
  kawa/ant/Kawac.java

EXTRA_DIST = kawa/util/PreProcess.java kawa/reflect/package.html \
  $(GNU_KAWA_ANT_JSOURCES)
EXTRA_CLEAN = */*.class kawa/*/*.class

PACKAGE_FNAME = gnu
GCJ_INPUTS = $(java_Java)

java_sources = \
  $(GNU_KAWA_IO_JSOURCES) \
  $(GNU_KAWA_UTIL_JSOURCES) \
  $(GNU_KAWA_REFLECT_JSOURCES) \
  $(GNU_KAWA_FUNCTIONS_JSOURCES) \
  $(GNU_KAWA_LISPEXPR_JSOURCES) \
  $(GNU_KAWA_MODELS_JSOURCES) \
  $(GNU_ECMASCRIPT_JSOURCES)
if WITH_SWING
java_sources += $(GNU_KAWA_SWINGVIEWS_JSOURCES)
endif
if WITH_SWT
java_sources += $(GNU_KAWA_SWTVIEWS_JSOURCES)
endif
if ENABLE_XML
java_sources += $(GNU_XML_JSOURCES) $(GNU_KAWA_XML_JSOURCES)
if WITH_SAX2
java_sources += $(GNU_KAWA_SAX_JSOURCES)
endif
endif

all:  Makefile java-classes.stamp $(@GCJ_COMPILED_SELECTED@)
